# CrewAI-POC

./: README.md  pyproject.toml
src/crewai_poc/: crew.py  main.py
